update landing page

--- a/index.html
+++ b/index.html
@@ -3077,6 +3077,7 @@ vertical-align: -.125em;
 <p>This repository contains short simulations and demonstrations of statistical phenomena prompted by comments I encounter in papers, books, etc. The goal is to build a small archive of intuition prompts that help with applied statistical decision-making.</p>
 <ul>
 <li><a href="https://jacob-gg.github.io/sims/barr-et-al-2013-random-slopes-keep-it-maximal">Consequences of omitting (warranted) random slopes; based on Barr et al., 2013</a></li>
+<li><a href="https://jacob-gg.github.io/sims/andersson-2023-wald-interval-poor-performance">Poor performance of Wald CIs for proportions; based on Andersson, 2023</a></li>
 </ul>
 
 </main>
